test/sematest/invalid/main_method_call2.java
class A {
  public static void main(String[] args) {

  }

  public void m(){
    main();
  }
}